# mesh_to_traversability_gridmap

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
config/: grid_map_visualization.yaml~  grid_map_visualization_loop.yaml~  gridmap_visualization.yaml  rviz_traversability.rviz
include/mesh_to_traversability_gridmap/: mesh_to_traversability_gridmap.hpp
launch/: mesh_to_freespace_grid_map_loop.launch~  mesh_to_freespace_grid_map_save.launch~  mesh_to_freespace_grid_map_test.launch~  mesh_to_traversability_gridmap.launch  mesh_to_traversability_gridmap.launch~  rosbag_freespace_gridmap.launch~  rosbag_freespace_gridmap_graph.launch~
src/: mesh_to_traversability_gridmap_node.cpp
